Fix input spacing on create account page

--- a/meta/static/styles/login_create_account.css
+++ b/meta/static/styles/login_create_account.css
@@ -16,6 +16,7 @@
 }
 
 .content form .firstlast-name {
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
